# network-params

./: .gitignore  CMakeLists.txt  README.md  catch.hpp
.github/workflows/: ci.yml
src/: constants_storage.h  main.cpp
src/application/: application.cpp  application.h
src/domain/: functions.cpp  network.cpp  network.h
src/gui/: window.cpp  window.h
tests/Network/: domain_tests.cpp
